--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
   <a href="ch8/"> 8장 달력</a>
   <h1>예제</h1>
   <a href="ch9/"> chapter 9 3D page </a>
+  <a href="ch10/"> chapter 10 ballon banner </a>
   
