--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@
   <a href="ch9/"> chapter 9 3D page </a>
   <br>
   <a href="ch10/"> chapter 10 ballon banner </a>
+  <br>
+  <a href="practice/"> book finder test api </a>
   
