--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
   <br>
   <a href="ch10/"> chapter 10 ballon banner </a>
   <br>
-  <a href="index2/"> book finder test api </a>
+  <a href="practice/index2.html/"> book finder test api </a>
   
