--- a/practice/index.html
+++ b/practice/index.html
@@ -1,42 +1,17 @@
-<!DOCTYPE html>
-<html lang="ko">
 
+<!DOCTYPE html>
+<html lang="en" onclick="jump()">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>책 검색 연습</title>
+    <title>Jump Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <h1>책 검색.</h1>
-    <input id="bookName" value="" type="text">
-    <button id="search">검색</button>
-
-    <p></p>
-    <script src="https://code.jquery.com/jquery-3.6.0.js"
-        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <script>
-        $(document).ready(function () {
-            $("#search").click(function () {
-                
-                $.ajax({
-                    method: "GET",
-                    url: "https://dapi.kakao.com/v3/search/book?target=title",
-                    data: { query: $("#bookName").val() },
-                    headers: { Authorization: "KakaoAK 74c4b0a2290c7e6ba7146168daaea398" }
-                })
-                    .done(function (msg) {
-                        console.log(msg.documents[0].title);
-                        console.log(msg.documents[0].thumbnail);
-                        $("p").append("<strong>" + msg.documents[0].title + "</strong>");
-                        $("p").append("<img src='" + msg.documents[0].thumbnail + "'/>");
-                    })
-
-                })
-        })
-    </script>
-
+    <div class="game">
+        <div id="character"></div>
+        <div id="block"></div>
+    </div>
+    <p>Score: <span id="scoreSpan"></span></p>
 </body>
-
+<script src="script.js"></script>
 </html>
