--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <H1>Jung의 홈페이지<H1>
   <a href="ch8/"> 8장 달력</a>
-  <h1>예제</h1>
+  <br>
+  <a href="project/"> 피하기 게임 </a>
   <a href="ch9/"> chapter 9 3D page </a>
   <br>
   <a href="ch10/"> chapter 10 ballon banner </a>
